umol-graph/tests/resolution/snapshots/resolution__resolution_suite__run_conformance_test@hydrocarbons_k5.snap
---
source: umol-graph/tests/resolution/mod.rs
expression: "results.to_edn().to_string_with(&FormatConfig::default())"
---
{
  :atom-typing {
    :output {
      :atoms ["C#v4" "C#v4" "C#v4" "C#v4" "C#v4"]
      :bonds [
        [0 1 :single]
        [0 2 :single]
        [0 3 :single]
        [0 4 :single]
        [1 2 :single]
        [1 3 :single]
        [1 4 :single]
        [2 3 :single]
        [2 4 :single]
        [3 4 :single]]}
    :success true}
  :counts {
    :output {
      :atoms ["C#v4" "C#v4" "C#v4" "C#v4" "C#v4"]
      :bonds [
        [0 1 :single]
        [0 2 :single]
        [0 3 :single]
        [0 4 :single]
        [1 2 :single]
        [1 3 :single]
        [1 4 :single]
        [2 3 :single]
        [2 4 :single]
        [3 4 :single]]}
    :success true}}
