umol-graph/tests/resolution/snapshots/resolution__resolution_suite__run_conformance_test@hydrocarbons_pentane.snap
---
source: umol-graph/tests/resolution/mod.rs
expression: edn_to_string_pretty(&results).unwrap()
---
{
  :atom-typing {
    :output {
      :atoms ["C#h3#v" "C#h2#v2" "C#h2#v2" "C#h2#v2" "C#h3#v"]
      :bonds [[0 1 :single] [1 2 :single] [2 3 :single] [3 4 :single]]
      :charge 0
      :spin "#u0 #s1"}
    :success true}
  :counts {
    :output {
      :atoms ["C#h3#v" "C#h2#v2" "C#h2#v2" "C#h2#v2" "C#h3#v"]
      :bonds [[0 1 :single] [1 2 :single] [2 3 :single] [3 4 :single]]
      :charge 0
      :spin "#u0 #s1"}
    :success true}}
